--- a/notations/details/index.html
+++ b/notations/details/index.html
@@ -248,6 +248,65 @@ class Notation {
     this._tags = slugify(tags);
   }
 
+  get purchaseInfo() {
+    let info = getObject(this.id);
+    if(!info) {
+      info = {
+        amount: 4000,
+        interest: 0.25,
+        sellAt: 123.4,
+      }
+    }
+
+    return this.calcPurchaseInfo(info.amount, info.interest, info.sellAt);
+  }
+
+  /**
+   * @param {any} investment float, in currency of your choice, defaults to 4000
+   * @param {any} interest float, percentage 0.0 - 1.0, defaults to 0.25
+   * @param {any} sellAt float, in currency of your choice, defaults to 123.4
+   */
+  setPurchaseInfo(investment, interest, sellAt) {
+    const result = this.calcPurchaseInfo(investment, interest, sellAt);
+
+    setObject(notation.id, {
+      amount: investment,
+      interest: interest,
+      sellAt: sellAt
+    });
+
+    return result;
+  }
+
+  /**
+   * 
+   * @param int investment in currency of your choice, defaults to 4000
+   * @param int interest percentage 0.0 - 1.0, defaults to 0.25
+   * @param float sellAt in currency of your choice, defaults to 123.4
+   */
+  calcPurchaseInfo(investment, interest, sellAt) {
+    const charges = 20.0;
+    const kest = 0.275;
+    const isDefault = interest == 0.25 && sellAt == 123.4
+    const requiredPerf = interest / (1 - kest);
+    const buyAtEstimate = sellAt * (1.0 / (1.0 + requiredPerf));
+    const countEstimate = Math.ceil(investment / buyAtEstimate);
+    const buyAt = (sellAt - charges / countEstimate) * (1.0 / (1.0 + requiredPerf));
+    const units = Math.ceil(investment / buyAt);
+    const investmentActual = parseInt(units) * buyAt;
+    const interestAbs = investmentActual * interest;
+
+    return {
+      amount: investmentActual,
+      interest: interest,
+      interestAbs: interestAbs,
+      units: units,
+      buyAt: buyAt,
+      sellAt: sellAt,
+      default: isDefault
+    };
+  }
+
   getDesc(callback) {
     var uri = "data/" + this.id.replace(":", "_").toLowerCase() + ".json";
 
@@ -511,20 +570,20 @@ var defaults = {
   "NYSE:ESTC": { name: "Elastic" },
 
   //ATX
-  "ATX:ANDR:96": { name: "Andritz" },
-  "ATX:VOE:19": { name: "Voest" },
-  "ATX:FACC:239": { name: "FACC" },
-  "ATX:LNZ:51": { name: "Lenzing" },
-  "ATX:OMV:16": { name: "OMV", tags: "Oil"  },
-  "ATX:POS:67": { name: "Porr" },
-  "ATX:WIE:4": { name: "Wienerberger" },
-  "ATX:VER:21": { name: "Verbund" },
-  "ATX:AGR:39": { name: "Agrana" },
-  "ATX:FLU:12": { name: "Flughafen Wien" },
-  "ATX:KTCG:211": { name: "Kapsch" },
-  "ATX:ROS:52": { name: "Rosenbauer" },
-  "ATX:SEM:18": { name: "Semperit" },
-  "ATX:STR:208": { name: "Strabag" },
+  // "ATX:ANDR:96": { name: "Andritz" },
+  // "ATX:VOE:19": { name: "Voest" },
+  // "ATX:FACC:239": { name: "FACC" },
+  // "ATX:LNZ:51": { name: "Lenzing" },
+  // "ATX:OMV:16": { name: "OMV", tags: "Oil"  },
+  // "ATX:POS:67": { name: "Porr" },
+  // "ATX:WIE:4": { name: "Wienerberger" },
+  // "ATX:VER:21": { name: "Verbund" },
+  // "ATX:AGR:39": { name: "Agrana" },
+  // "ATX:FLU:12": { name: "Flughafen Wien" },
+  // "ATX:KTCG:211": { name: "Kapsch" },
+  // "ATX:ROS:52": { name: "Rosenbauer" },
+  // "ATX:SEM:18": { name: "Semperit" },
+  // "ATX:STR:208": { name: "Strabag" },
 
   //ETFs
   "NYSE:SPY": { name: "ETF SP500" },
@@ -690,61 +749,53 @@ function deleteNotation(id) {
 
     //buy calculator
     function initCalc() {
-      const cookie = getObject(notation.id);
+      const purchaseInfo = notation.purchaseInfo;
 
-      let amount = 4000;
-      let interest = 0.25;
-      let sellAt = 123.4;
-      if (cookie) {
-        amount = cookie.amount;
-        interest = cookie.interest;
-        sellAt = cookie.sellAt;
-      }
-
-      $("#amount").val(amount.toFixed(0));
-      $("#interest").val((100 * interest).toFixed(0));
-      $("#sellAt").val(sellAt.toFixed(2));
-    }
-
-    function updateCalcFromInput() {
-
-      updateCalc(amount, interest, sellAt);
+      $("#amount").val(purchaseInfo.amount.toFixed(0));
+      $("#interest").val((100 * purchaseInfo.interest).toFixed(0));
+      $("#sellAt").val(purchaseInfo.sellAt.toFixed(2));
     }
 
     function updateCalc() {
       const investment = parseInt($('#amount').val());
       const interest = parseInt($('#interest').val()) / 100.0;
       const sellAt = parseFloat($('#sellAt').val());
-      const charges = 20.0;
-      const kest = 0.275;
-      const reqPerf = interest / (1 - kest);
 
-      const buyAtEstimate = sellAt * (1.0 / (1.0 + reqPerf));
-      const countEstimate = Math.ceil(investment / buyAtEstimate);
+      const purchaseInfo = notation.setPurchaseInfo(investment, interest, sellAt); 
 
-      const buyAt = (sellAt - charges / countEstimate) * (1.0 / (1.0 + reqPerf));
-      const count = Math.ceil(investment / buyAt);
-
-      const investmentActual = parseInt(count) * buyAt;
-      const interestAbs = investmentActual * interest;
-
-      $("#amount").val(investmentActual.toFixed(0));
-      $("#interest").val((100 * interest).toFixed(0));
-      $("#interestAbs").val(interestAbs.toFixed(0));
-      $("#count").val(count.toFixed(0));
-      $("#buyAt").val(buyAt.toFixed(2));
-      $("#sellAt").val(sellAt.toFixed(2));
-
-      setObject(notation.id, {
-        amount: investment,
-        interest: interest,
-        sellAt: sellAt
-      });
+      $("#amount").val(purchaseInfo.amount.toFixed(0));
+      $("#interest").val((100 * purchaseInfo.interest).toFixed(0));
+      $("#interestAbs").val(purchaseInfo.interestAbs.toFixed(0));
+      $("#count").val(purchaseInfo.units.toFixed(0));
+      $("#buyAt").val(purchaseInfo.buyAt.toFixed(2));
+      $("#sellAt").val(purchaseInfo.sellAt.toFixed(2));
     }
     $("#sellAt, #amount, #interest").change(updateCalc);
     initCalc();
     updateCalc();
     $("#sellAt").focus().select();
+
+    //Currently unused, but didn't want to delete it yet...
+    $(function() {
+      $(window).keypress(function(e) {
+        var key = e.which;
+        if(key == 97) {
+          event.preventDefault();
+
+          console.log("Pressed 'a': wants to see previous notation.");
+          // var notations = findAndSortNotations(query);
+          // let prev;
+          // notations.find(function(n) {
+          //   if(notation.id === n.id) {
+          //   }
+          //   prev = n;
+          // });
+        } else if(key == 100) {
+          console.log("Pressed 'd': wants to see next notation.");
+          event.preventDefault();
+        }
+      });
+    });
   }
 </script>
 
