--- a/notations/details/index.html
+++ b/notations/details/index.html
@@ -368,7 +368,7 @@ class Notation {
   }
 
   getStockChartsUri(timeSpan) {
-    const cfg = "p49015818842"; // "p34461991577";
+    const cfg = "p29326190716"; //p49015818842";
     
     let ts = "&yr=9&mn=0&dy=0";
     if (timeSpan.id === "5M") {
