--- a/notations/json/index.html
+++ b/notations/json/index.html
@@ -476,7 +476,7 @@ var defaults = {
   "NYSE:SHOP": { name: "Shopify" },
   "NYSE:CAJ": { name: "Canon" },
   "NYSE:MSI": { name: "Motorola" },
-  "NYSE:AG": { name: "First Majestic Silver" },
+  "NYSE:AG": { name: "First Majestic Silver", tags: "Silver" },
   "NYSE:LIN": { name: "Linde" },
   "NYSE:MANU": { name: "Manchester United" },
   "NYSE:NKE": { name: "Nike" },
@@ -530,13 +530,13 @@ var defaults = {
   "NYSE:KOL": { name: "ETF Basic Coal" },
   "NYSE:FCG": { name: "ETF Basic Gas" },
   "NYSE:CPER": { name: "ETF Basic Copper" },
-  "NYSE:SLV": { name: "ETF Basic Silver" },
-  "NYSE:GLD": { name: "ETF Basic Gold", tags: "Gold" },
+  "NYSE:SLV": { name: "ETF Basic Silver", tags: "Silver" },
   "NYSE:LIT": { name: "ETF Basic Lithium" },
   "NYSE:PALL": { name: "ETF Basic Palladium" },
   "NYSE:PPLT": { name: "ETF Basic Platinum" },
   "NYSE:PHO": { name: "ETF Basic Water" },
 
+  "NYSE:GLD": { name: "ETF Basic Gold", tags: "Gold" },
   "NYSE:GDX": { name: "ETF Gold Miners", tags: "Gold" },
   "NYSE:JNUG": { name: "ETF Gold Miners 3x", tags: "Gold" },
   "NYSE:JDST": { name: "ETF Gold Miners -3x", tags: "Gold" },
