--- a/notations/config/index.html
+++ b/notations/config/index.html
@@ -297,7 +297,7 @@ class Notation {
   }
 
   getStockChartsUri(timeSpan) {
-    const cfg = "p29326190716"; //p49015818842";
+    const cfg = "p28951652856"; //<-SMA, EMA-> "p29326190716";
     
     let ts = "&yr=9&mn=0&dy=0";
     if (timeSpan.id === "5M") {
