--- a/notations/index.html
+++ b/notations/index.html
@@ -2321,7 +2321,7 @@ class Notation {
   }
 
   get googleUri() {
-    return 'https://www.google.com/finance?q=' + this.id;
+    return 'https://www.google.com/search?q=' + this.id;
   }
 
   getFinvizUri(timeSpan) {
