--- a/notations/json/index.html
+++ b/notations/json/index.html
@@ -286,7 +286,7 @@ class Notation {
   }
 
   get googleUri() {
-    return 'https://www.google.com/finance?q=' + this.id;
+    return 'https://www.google.com/search?q=' + this.id;
   }
 
   getFinvizUri(timeSpan) {
