--- a/notations/details/index.html
+++ b/notations/details/index.html
@@ -26,7 +26,7 @@
   <input id="price" type="text" value="" readonly />
   with <span title="daily simple moving average over the last 253 trading days, which equals a whole trading year">average</span> at
   <input id="avgSimpleYearly" type="text" value="" readonly />
-  and <span title="the potential change of the current price, if it would return to the SMA253. if this value is positive, the current price is below the average.">potential</span> of
+  and <span title="the potential change of the current price, if it would return to the SMA253. if this value is positive, the current price is below the long-term average.">distance</span> of
   <input id="potential" type="text" value="" readonly />
   %.
 </div>
